--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -18,7 +18,7 @@ form {
     padding: 2rem;
     border-radius: 8px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    text-align: center; /* Align center for child elements */
+    text-align: center; 
 }
 
 .title {
@@ -63,14 +63,9 @@ textarea {
     font-size: 16px;
 }
 
-.alert-success {
+#alert-message {
+    color: white;
     margin-bottom: 0.5rem;
-    color: #155724;
-}
-
-.alert-danger {
-    margin-bottom: 0.5rem;
-    color: #721c24;
 }
 
 @media only screen and (max-width: 480px) {
