adding files and structure for the website

--- a/public/css/boutique.css
+++ b/public/css/boutique.css
@@ -30,6 +30,7 @@
     border-radius: 8px;
     margin: 1rem;
     padding: 20px;
+    height: auto;
     width: calc(25% - 2rem);
     box-sizing: border-box;
 }
@@ -64,8 +65,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 1.6rem;
-    width: 1.6rem;
+    height: 1.3rem;
+    width: 1.3rem;
+    font-size: 0.85rem;
     background-color: black;
     color: white;
     border: 1px solid  gray;
@@ -73,12 +75,16 @@
 }
 
 .color {
-    height: 1.6rem;
-    width: 1.6rem;
+    height: 1.3rem;
+    width: 1.3rem;
     border: 1px solid gray;
     border-radius: 4px;
+    cursor: pointer;
 }
 
+.prix {
+    font-size: 1.2rem;
+}
 .black {
     background-color: black;
 }
@@ -97,6 +103,10 @@
 
 .purple {
     background-color: purple;
+}
+
+.prix {
+    text-align: right;
 }
 
 
@@ -149,23 +159,19 @@ textarea {
 }
 
 .button {
-    background-color: blueviolet;
-    color: White;
+    background-color: #f6c54b;
+    color: black;
     padding: 10px 20px;
     border: none;
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    font-weight: bold;
 }
 
-.alert-success {
+#alert-message {
+    color: white;
     margin-bottom: 0.5rem;
-    color: #155724;
-}
-
-.alert-danger {
-    margin-bottom: 0.5rem;
-    color: #721c24;
 }
 
 #faq {
@@ -177,6 +183,22 @@ textarea {
     text-align: center;
 }
 
+.question-reponse {
+    margin: 1rem;
+    width: 100%;
+    text-align: left;
+    
+}
+
+.question-reponse p {
+    width: 90%;
+    margin: 0.5rem;
+    padding-bottom: 0.5rem;
+    border-bottom: 1px solid #ddd;
+    margin-bottom: 2rem;
+}
+
+
 @media only screen and (max-width: 480px) {
     #work-in-progress {
         margin: auto;
@@ -185,5 +207,54 @@ textarea {
 
     #work-in-progress h1 {
         font-size: 1.5rem;
+    }
+
+    #store {
+        display: block;
+        text-align: center;
+        padding: 1rem 1rem;
+        background-color: #E7CEF3;
+    }
+
+    .container {
+        padding: 0;
+        flex-direction: column;
+    }
+
+    .card {
+        margin: 1rem auto;
+        width: 90%;
+    }
+
+    #command-form {
+        flex-direction: column;
+    }
+
+    form, #faq {
+        width: 70%;
+        margin: 1rem auto;
+    }
+
+    form {
+        margin-bottom: 0;
+    }
+
+    #faq {
+        margin-top: 0;
+    }
+
+    .question-reponse {
+        margin: 1rem;
+        width: 100%;
+        text-align: left;
+        
+    }
+
+    .question-reponse h3 {
+        font-size: 1rem;
+    }
+    
+    .question-reponse p {
+        font-size: 0.925rem;
     }
 }
