--- a/public/css/equipes.css
+++ b/public/css/equipes.css
@@ -1,10 +1,117 @@
 #work-in-progress {
-    display: block;
+    display: none;
     padding: 2rem 0;
     text-align: center;
     width: 100%;
     height: calc(100vh - 26.5rem);
 }
+
+#equipes {
+    background-color: #E7CEF3;
+    text-align: center;
+}
+
+.page-nav {
+    background-color: #f6c54b;
+}
+
+.sex {
+    font-size: 1.2rem;
+    display: inline-block;
+    margin: 0.5rem 1rem;
+}
+
+.sex:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.active {
+    color: white;
+}
+
+.equipes-feminines, .equipes-mixtes, .equipes-masculines {
+    padding: 2rem 3rem;
+}
+
+.equipes-mixtes, .equipes-masculines {
+    display: none;
+}
+
+.equipes-feminines h2, .equipes-mixtes h2, .equipes-masculines h2 {
+    font-size: 2rem;
+}
+
+section {
+    padding: 3rem 1rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.image-equipe {
+    height: 350px;
+    width: auto;
+    border-radius: 0.5rem;
+}
+
+.content {
+    background-color: white;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 0.5rem;
+    height: 350px;
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+
+}
+
+.label {
+    margin-top: 0.5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 1rem;
+}
+
+.line {
+    height: 3px;
+    width: 90px;
+    background-color: #f6c54b;
+}
+
+.content h3 {
+    font-size: 1.5rem;
+}
+
+
+.content h4 {
+    margin: 1rem;
+    margin-left: 2rem;
+}
+
+.content p {
+    margin-left: 1.5rem;
+    margin-left: 2.5rem;
+}
+
+.content a {
+    color: black;
+    text-decoration: none;
+    background-color: #f6c54b;
+    padding: 1rem 2rem;
+    margin: 1rem auto;
+    border-radius: 0.5rem;
+}
+
+.description {
+    text-align: left;
+}
+
+.mobile {
+    display: none;
+}
+
 
 @media only screen and (max-width: 480px) {
     #work-in-progress {
@@ -15,4 +122,65 @@
     #work-in-progress h1 {
         font-size: 1.5rem;
     }
+
+    .equipes-feminines, .equipes-mixtes, .equipes-masculines {
+        padding: 1rem;
+    }
+
+    .equipes-feminines h2, .equipes-mixtes h2, .equipes-masculines h2 {
+        font-size: 1.5rem;
+    }
+
+    .sex {
+        font-size: 1rem;
+        display: inline-block;
+        margin: 0.5rem 1rem;
+    }
+
+    section {
+        flex-direction: column;
+        padding: 1rem;
+    }
+
+    .image-equipe {
+        margin: 1rem auto;
+        width: 100%;
+        height: auto;
+    }
+
+    .content {
+        margin: 1rem auto;
+        width: 90%;
+        height: auto;
+    }
+
+    .content h3 {
+        font-size: 1rem;
+    }
+    
+    
+    .content h4 {
+        font-size: 0.925rem;
+    }
+    
+    .content p {
+        font-size: 0.85rem;
+    }
+    
+    .content a {
+        font-size:  0.925rem;
+    }
+
+    .line {
+        width: 60px;
+    }
+
+    .mobile {
+        display: block;
+    }
+
+    .desktop {
+        display: none;
+    }
+
 }
