--- a/public/css/evenements.css
+++ b/public/css/evenements.css
@@ -6,6 +6,13 @@
     height: calc(100vh - 26.5rem);
 }
 
+#events {
+    display: none;
+    text-align: center;
+    padding: 1rem 5rem;
+    background-color: #E7CEF3;
+}
+
 @media only screen and (max-width: 480px) {
     #work-in-progress {
         margin: auto;
