--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,24 +1,100 @@
-  #presentation {
-    text-align: center;
+#club-info {
+    display: flex;
+    justify-content: space-around;
     padding: 2rem 5rem;
     background-color: #E7CEF3;
+    text-align: center;
+}
+
+.actualites {
+    width: 40%;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.actualites-list {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.actualite-item {
+    display: flex;
+    align-items: center;
+}
+
+.actualite-image {
+    max-width: 100%;
+    height: auto;
+    border-radius: 4px;
+    margin-right: 20px;
+}
+
+.actualite-content {
+    text-align: left;
+    width: 100%;
+}
+
+.button-container {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+    text-align: center;
+}
+
+.access-button {
+    padding: 10px 20px;
+    background-color: #f6c54b;
+    color: black;
+    text-decoration: none;
+    border-radius: 5px;
+}
+
+.access-button:hover {
+    background-color: #b99729;
+}
+
+.matchs {
+    width: 40%;
+    background-color: white;
+    padding: 1rem;
+    border-radius: 8px;
+}
+
+.sex  {
+    margin: 1rem;
+    text-align: left;
+}
+
+.sex h3 {
+    margin-bottom: 0.5rem;
+}
+
+.sex p {
+    color: #777;
+    margin-left: 0.5rem;
+}
+  
+
+#presentation {
+    text-align: center;
+    padding: 3rem 2rem;
+    background-color: #FFE66D;
 }
 
 .presentation-container {
     display: flex;
-    margin: 2rem;
-    margin-bottom: 0;
-    gap: 4rem;
+    gap: 2rem;
 }
 
 .presentation-container img {
     height: auto;
-    width: 50%;
+    width: 60%;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 .presentation-container .content {
-    width: 50%;
+    width: 40%;
     background-color: white;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -29,13 +105,16 @@
 }
 
 .presentation-container .content p {
+    text-align: left;
     margin: 1rem;
-    font-size: 1.125rem;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #777;
 }
 
 
 #gallery {
-    background-color: #FFE66D;
+    background-color: #E7CEF3;
     text-align: center;
     padding: 2rem 5rem;
 }
@@ -89,10 +168,19 @@
 
 @media only screen and (max-width: 480px) {
 
-    #presentation {
-        text-align: center;
+    #club-info {
+        flex-direction: column;
         padding: 2rem 1rem;
-        background-color: #E7CEF3;
+        gap: 2rem;
+    }
+
+    .actualites, .matchs {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    #presentation {
+        padding: 2rem 1rem;
     }
     .presentation-container {
         flex-direction: column;
