--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -1,6 +1,7 @@
 footer {
     background-color: rgb(36, 36, 36);
     color: #f6c54b;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 footer h4 {
