--- a/public/css/inscription.css
+++ b/public/css/inscription.css
@@ -1,18 +1,56 @@
-#work-in-progress {
-    display: block;
-    padding: 2rem 0;
+main {
+    background-color: #E7CEF3;
+    padding-bottom: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#page-nav {
+    background-color: #f6c54b;
     text-align: center;
-    width: 100%;
-    height: calc(100vh - 26.5rem);
+    margin-bottom: 2rem;
+}
+
+.categorie {
+    font-size: 1.2rem;
+    display: inline-block;
+    margin: 0.5rem 1rem;
+}
+
+.categorie:hover {
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.active {
+    color: white;
+}
+
+#work-in-progress {
+    line-height: 1.6;
+    background-color: #f7f7f7;
+    color: #333;
+    margin: 0;
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 2rem;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    text-align: center;
 }
 
 @media only screen and (max-width: 480px) {
     #work-in-progress {
+        width: 70%;
         margin: auto;
-        height: auto;
     }
 
     #work-in-progress h1 {
         font-size: 1.5rem;
     }
+
+    .categorie {
+        font-size: 1rem;
+        display: inline-block;
+        margin: 0.5rem 1rem;
+    } 
 }
