--- a/public/css/boutique.css
+++ b/public/css/boutique.css
@@ -1,3 +1,9 @@
+main {
+    background-color: #E7CEF3;
+    padding-bottom: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
 #work-in-progress {
     display: none;
     padding: 2rem 0;
@@ -27,7 +33,7 @@
 .card {
     background-color: white;
     border: 1px solid #ddd;
-    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     margin: 1rem;
     padding: 20px;
     height: auto;
@@ -113,7 +119,7 @@
 #command-form {
     display: flex;
     justify-content: space-around;
-    background-color: #FFE66D;
+    background-color: #E7CEF3;
     padding: 2rem 0;
 }
 
@@ -121,8 +127,7 @@ form {
     background-color: #fff;
     width: 40%;
     padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 
@@ -178,8 +183,7 @@ textarea {
     background-color: #fff;
     width: 40%;
     padding: 2rem;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 
