--- a/public/css/index.css
+++ b/public/css/index.css
@@ -136,6 +136,42 @@ article p {
     margin: 2rem;
 }
 
+.container {
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+}
+
+.card {
+    background-color: white;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    margin: 1rem;
+    padding: 20px;
+    height: auto;
+    width: calc(50% - 2rem);
+    box-sizing: border-box;
+}
+
+.image-container img {
+    width: 100%;
+    height: auto;
+    border-radius: 0.5rem;
+    transition: transform 0.3s ease-in-out; 
+}
+
+.image-container img:hover {
+    transform: scale(1.1);
+}
+
+.event-details {
+    font-style: italic;
+    color: #555;
+}
+
+
+
   
 @media only screen and (max-width: 480px) {
     .categorie {
@@ -164,5 +200,10 @@ article p {
     }
     article p {
         margin: 1rem;
+    }
+
+    .card {
+        margin: 1rem auto;
+        width: 100%;
     }
 }
