--- a/public/css/evenements.css
+++ b/public/css/evenements.css
@@ -106,6 +106,10 @@ main {
         font-size: 1.5rem;
     }
 
+    .evenements-club, .evenements-plateaux, .evenements-stages {
+        padding: 1rem 2rem;
+    }
+
     .box {
         width: 100%;
     }
