--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,7 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@500&family=Roboto:wght@500&display=swap');
 main {
     background-color: #E7CEF3;
     padding-bottom: 2rem;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Kanit', sans-serif;
 }
 
 #page-nav {
