phone format correction and spelling correction

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -78,6 +78,7 @@ nav a:hover {
     width: 250px;
     height: 100%;
     background-color: #44315E;
+    opacity: 0.9;
     color: #fff;
     transition: left 0.3s ease;
     display: flex;
@@ -199,6 +200,7 @@ main {
 
 .box a:hover {
     background-color: #6E5494;
+    color: #f6c54b;
 }
 
 .box .image-verticale {
@@ -235,7 +237,7 @@ main {
 }
 
 .item img {
-    margin: 0 auto;
+    margin: auto;
     width: 100px;
     height: 100px;
 }
@@ -278,10 +280,10 @@ article p {
 }
 
 .gallerie img {
-    max-width: auto; /* Assure que les images ne dépassent pas leur taille originale */
+    max-width: auto;
     height: 300px;
-    display: inline-block; /* Permet aux images d'être côte à côte */
-    margin: 10px; /* Ajoute une marge entre les images */
+    display: inline-block; 
+    margin: 10px; 
 }
 
 .event-details {
@@ -334,9 +336,9 @@ textarea {
     font-family: 'Kanit', sans-serif;
     background-color: #44315E;
     color: white;
-    padding: 10px 20px;
+    padding: 0.5rem 1rem;
     border: none;
-    border-radius: 4px;
+    border-radius: 0.5rem;
     cursor: pointer;
     font-size: 1rem;
     transition: ease-in-out 0.3s;
@@ -344,6 +346,7 @@ textarea {
 
 .button:hover {
     background-color: #6E5494;
+    color: #f6c54b;
 }
 
 #alert-message {
@@ -496,7 +499,7 @@ footer a {
         transform: translateX(100%);
     }
     100% {
-        transform: translateX(-100%);
+        transform: translateX(-120%);
     }
 }
 
@@ -526,9 +529,23 @@ footer a {
         flex-direction: row;
     }
 
+    .item:hover {
+        background-color: none;
+    }
+
     .cinquante, .trente-trois, .vingt-cinq, #actualites .cinquante {
-        width: 90%;
+        width: 95%;
         margin: 1rem auto;
+    }
+
+    article {
+        max-width: 100%;
+        margin: auto;
+    }
+
+    article h2 {
+        max-width: 80%;
+        margin: auto;
     }
 
     #partenariat {
